tdf#162935: use PUTC for WITH variable assignment: it doesn't copy value

SbiRuntime::StepPUT, SbiRuntime::StepSET, SbiRuntime::StepVBASET call
checkUnoStructCopy eventually, which copies the UNO struct by value.
This is not what we need. On the other hand, SbiRuntime::StepPUTC only
makes the by-ref assignment, and makes the reference const; but Basic
code never assigns anything to the internal variable itself, only to
its members.

I hope that this time, I get it right.

Change-Id: I2b4a51a2dca9e7106e14e03360ef0d5a50b60079
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173305
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 47a348bb0fd6dfdd93c1975d216daadc4f6b9b6f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173287
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>